deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crudprojekt
spec:
  replicas: 1
  selector:
    matchLabels:
      app: crudprojekt
  template:
    metadata:
      labels:
        app: crudprojekt
    spec:
      containers:
      - name: crudprojekt
        image: crudprojekt:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
