service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crud-demo-service
spec:
  type: NodePort
  selector:
    app: crud-demo
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30007
