ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: crud-demo-ingress
spec:
  rules:
  - host: crud-demo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: crud-demo-service
            port:
              number: 80
